docs: update readme and list md